base/exoplanets/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: exoplanets-app
  name: exoplanets-route
spec:
  host: exoplanets.apps.cluster01.klaverviertjes.nl
  port:
    targetPort: 8080
  tls:
    certificate: |
      -----BEGIN CERTIFICATE-----
      MIIGmzCCBIOgAwIBAgIUZ468yjZ9T12eDYTFTmV3oENBnMkwDQYJKoZIhvcNAQEL
[...]
      +aLBmYDvJ8fLn5KWAc9O
      -----END CERTIFICATE-----
    key: |
      -----BEGIN PRIVATE KEY-----
      MIIJQwIBADANBgkqhkiG9w0BAQEFAASCCS0wggkpAgEAAoICAQC9perVXLvQHoB2
[...]
      5MpWbzW5FH0g0GcIxIO8abCVdRpeKD4=
      -----END PRIVATE KEY-----
    termination: edge
  to:
    kind: ""
    name: exoplanets-app
    weight: null
status: {}
